# point-sphere

./: CMakeLists.txt  README.md  notes.md
include/: glad.c  glad.h  shader.h
src/: main.cpp  shader.h
src/shaders/: fragment.glsl  vertex.glsl  vertex_shader.glsl
